# solana-chat

fprog/: Cargo.toml
fprog/src/: chat.rs  main.rs
program/: Cargo.toml
program/md/: Cargo.toml
program/md/src/: data.rs
program/src/: lib.rs  processor.rs
