[package]
name = "fprog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.9.3"
solana-sdk = "1.9.3"
borsh = "0.9.1"
borsh-derive = "0.9.1"
arrayref = "0.3.6"
clap = { version = "3.0.7", features = ["derive"] }

[dependencies.md]
version = "0.1.0"
path = "../program/md"
